--- a/index.html
+++ b/index.html
@@ -1209,11 +1209,11 @@
                     <h1 class="display-5"><span class="text-primary">From Our Blog</span></h1>
                     <p class="lead">Stay up-to-date with our latest news and insights.</p>
                 </div>
-                <div class="carousel-inner blog-carousel owl-theme">
+                <div class="carousel slide blog-carousel owl-theme">
 
                     <!-- Blog Post 1 -->
-                    <div class="carousel-item">
-                        <div class="blog-post text-center px-3">
+                    <div class="carousel-inner">
+                        <div class="blog-post carousel-item text-center px-3">
                             <img src="assets/imgs/blog-1.jpg" alt="Blog Post 1" class="img-fluid rounded shadow">
                             <h4 class="mt-3"><a href="#">How to Secure Scholarships for International Studies</a></h4>
                             <p>Learn the best strategies to secure scholarships for your international studies.</p>
@@ -1222,7 +1222,7 @@
 
                     <!-- Blog Post 2 -->
                     <div class="carousel-inner">
-                        <div class="blog-post text-center px-3">
+                        <div class="blog-post carousel-items text-center px-3">
                             <img src="assets/imgs/Abroad students Malawi flag.jpg" alt="Blog Post 2"
                                 class="img-fluid rounded shadow">
                             <h4 class="mt-3"><a href="#">Top Universities for International Students</a></h4>
@@ -1231,8 +1231,8 @@
                     </div>
 
                     <!-- Blog Post 3 -->
-                    <div class="carousel-item">
-                        <div class="blog-post text-center px-3">
+                    <div class="carousel-inner">
+                        <div class="blog-post carousel-item text-center px-3">
                             <img src="assets/imgs/doctors pose.jpg" alt="Blog Post 3" class="img-fluid rounded shadow">
                             <h4 class="mt-3"><a href="#">Tips for Successful University Applications</a></h4>
                             <p>Get tips and tricks for making your university application stand out.</p>
@@ -1240,15 +1240,15 @@
                     </div>
 
                     <!-- Add more if needed -->
-                    <div class="carousel-item">
-                        <div class="blog-post text-center px-3">
+                    <div class="carousel-inner">
+                        <div class="blog-post carousel-item text-center px-3">
                             <img src="assets/imgs/graduation.jpg" alt="Blog Post 4" class="img-fluid rounded shadow">
                             <h4 class="mt-3"><a href="#">Tips for International Students' Academic Success</a></h4>
                             <p>Discover the best strategies for improving your international student's academic performance.</p>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="blog-post text-center px-3">
+                    <div class="carousel-inner">
+                        <div class="blog-post carousel-item text-center px-3">
                             <img src="assets/imgs/graduation-cap.jpg" alt="Blog Post 5" class="img-fluid rounded shadow">
                             <h4 class="mt-3"><a href="#">International Student Success Stories</a></h4>
                             <p>Share your experiences and tips with other international students.</p>
